deploy/k8s/manifest.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: photoprism-db
  namespace: tools
  labels:
    app: photoprism-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photoprism-db
  template:
    metadata:
      labels:
        app: photoprism-db
    spec:
      containers:
        - name: photoprism-db
          image: "harbor.k8s.lan/dockerhub-proxy/mariadb:10.10"
          resources: {}
          ports:
            - containerPort: 3306
          args:
            - mysqld
            - --innodb-buffer-pool-size=128M
            - --transaction-isolation=READ-COMMITTED
            - --character-set-server=utf8mb4
            - --collation-server=utf8mb4_unicode_ci
            - --max-connections=512
            - --innodb-rollback-on-timeout=OFF
            - --innodb-lock-wait-timeout=120
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pvc-iscsi-photoprism-db

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: photoprism
  namespace: tools
  labels:
    app: photoprism
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photoprism
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      containers:
        - name: photoprism
          image: "harbor.k8s.lan/dockerhub-proxy/photoprism/photoprism:latest"
          resources: {}
          ports:
            - containerPort: 2342
          volumeMounts:
            - name: photoprism-storage
              mountPath: /photoprism/storage
            - name: photoprism-originals
              mountPath: /photoprism/originals
            - name: photoprism-import
              mountPath: /photoprism/import
      volumes:
        - name: photoprism-storage
          persistentVolumeClaim:
            claimName: pvc-iscsi-photoprism-storage
        - name: photoprism-originals
          persistentVolumeClaim:
            claimName: pvc-nfs-photoprism-originals
        - name: photoprism-import
          persistentVolumeClaim:
            claimName: pvc-nfs-photoprism-import

---
apiVersion: v1
kind: Service
metadata:
  name: photoprism-db
  namespace: tools
  labels:
    app: photoprism-db
spec:
  selector:
    app: photoprism-db
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306

---
kind: Service
apiVersion: v1
metadata:
  name: photoprism
  namespace: tools
  labels:
    app: photoprism
spec:
  selector:
    app: photoprism
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 2342

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: photoprism
  namespace: tools
  labels:
    app: photoprism
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
spec:
  ingressClassName: nginx-private
  rules:
    - host: photos.k8s.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photoprism
                port:
                  number: 80
